// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`c-infos-attribute-field Renders \`c-pattern-infos-attribute-field\` with custom props 1`] = `
<div
  class="layout"
>
  <div
    class="flex"
  >
    <div
      class="v-input v-input--is-label-active v-input--is-dirty v-input--is-disabled v-input--is-focused theme--light v-text-field v-select v-select--is-menu-active v-autocomplete"
    >
      <div
        class="v-input__control"
      >
        <div
          aria-expanded="true"
          aria-haspopup="listbox"
          class="v-input__slot"
          role="combobox"
        >
          <div
            class="v-select__slot"
          >
            <label
              class="v-label v-label--active v-label--is-disabled theme--light primary--text"
              style="left: 0px; position: absolute;"
            >
              Custom label
            </label>
            <input
              aria-activedescendant="list-item-66-0"
              autocomplete="off"
              disabled="disabled"
              type="text"
            />
            <div
              class="v-input__append-inner"
            >
              <div
                class="v-input__icon v-input__icon--append"
              >
                <i
                  aria-hidden="true"
                  class="v-icon notranslate v-icon--disabled material-icons theme--light"
                >
                  arrow_drop_down
                </i>
              </div>
            </div>
            <input
              name="custom_filter_infos_attribute_name.dictionary"
              type="hidden"
              value="Test text"
            />
          </div>
          <div
            class="v-menu"
          />
        </div>
        <div
          class="v-text-field__details"
        >
          <div
            class="v-messages theme--light"
          >
            <transition-group-stub
              class="v-messages__wrapper"
              name="message-transition"
              tag="div"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="flex"
  >
    <div
      class="v-input v-input--is-disabled v-input--is-focused theme--light v-text-field v-select v-select--is-menu-active"
    >
      <div
        class="v-input__control"
      >
        <div
          aria-expanded="true"
          aria-haspopup="listbox"
          class="v-input__slot"
          role="button"
        >
          <div
            class="v-select__slot"
          >
            <label
              class="v-label v-label--active v-label--is-disabled theme--light primary--text"
              style="left: 0px; position: absolute;"
            >
              Custom label
            </label>
            <div
              class="v-select__selections"
            >
              <input
                aria-readonly="false"
                autocomplete="off"
                disabled="disabled"
                readonly="readonly"
                type="text"
              />
            </div>
            <div
              class="v-input__append-inner"
            >
              <div
                class="v-input__icon v-input__icon--append"
              >
                <i
                  aria-hidden="true"
                  class="v-icon notranslate v-icon--disabled material-icons theme--light"
                >
                  arrow_drop_down
                </i>
              </div>
            </div>
            <input
              name="custom_filter_infos_attribute_name.field"
              type="hidden"
              value="test"
            />
          </div>
          <div
            class="v-menu"
          >
            <transition-stub
              name="v-menu-transition"
            />
          </div>
        </div>
        <div
          class="v-text-field__details"
        >
          <div
            class="v-messages theme--light"
          >
            <transition-group-stub
              class="v-messages__wrapper"
              name="message-transition"
              tag="div"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`c-infos-attribute-field Renders \`c-pattern-infos-attribute-field\` with custom props 2`] = `
<div
  class="v-menu__content theme--light menuable__content__active v-autocomplete__content"
  style="max-height: 304px; min-width: 0px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 8;"
>
  <div
    class="v-list v-select-list v-sheet theme--light theme--light"
    role="listbox"
    tabindex="-1"
  >
    <div
      aria-selected="true"
      class="v-list-item primary--text v-list-item--active v-list-item--link theme--light v-list-item--highlighted"
      role="option"
      tabindex="0"
    >
      <div
        class="v-list-item__content"
      >
        <div
          class="v-list-item__title"
        >
          Test text
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`c-infos-attribute-field Renders \`c-pattern-infos-attribute-field\` with custom props 3`] = `
<div
  class="layout"
>
  <div
    class="flex"
  >
    <div
      class="v-input v-input--is-label-active v-input--is-dirty v-input--is-disabled v-input--is-focused theme--light v-text-field v-select v-select--is-menu-active v-autocomplete"
    >
      <div
        class="v-input__control"
      >
        <div
          aria-expanded="true"
          aria-haspopup="listbox"
          class="v-input__slot"
          role="combobox"
        >
          <div
            class="v-select__slot"
          >
            <label
              class="v-label v-label--active v-label--is-disabled theme--light primary--text"
              style="left: 0px; position: absolute;"
            >
              Custom label
            </label>
            <input
              aria-activedescendant="list-item-89-0"
              autocomplete="off"
              disabled="disabled"
              type="text"
            />
            <div
              class="v-input__append-inner"
            >
              <div
                class="v-input__icon v-input__icon--append"
              >
                <i
                  aria-hidden="true"
                  class="v-icon notranslate v-icon--disabled material-icons theme--light"
                >
                  arrow_drop_down
                </i>
              </div>
            </div>
            <input
              name="custom_filter_infos_attribute_name.dictionary"
              type="hidden"
              value="Test text"
            />
          </div>
          <div
            class="v-menu"
          />
        </div>
        <div
          class="v-text-field__details"
        >
          <div
            class="v-messages theme--light"
          >
            <transition-group-stub
              class="v-messages__wrapper"
              name="message-transition"
              tag="div"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="flex"
  >
    <div
      class="v-input v-input--is-disabled v-input--is-focused theme--light v-text-field v-select v-select--is-menu-active"
    >
      <div
        class="v-input__control"
      >
        <div
          aria-expanded="true"
          aria-haspopup="listbox"
          class="v-input__slot"
          role="button"
        >
          <div
            class="v-select__slot"
          >
            <label
              class="v-label v-label--active v-label--is-disabled theme--light primary--text"
              style="left: 0px; position: absolute;"
            >
              Custom label
            </label>
            <div
              class="v-select__selections"
            >
              <input
                aria-readonly="false"
                autocomplete="off"
                disabled="disabled"
                readonly="readonly"
                type="text"
              />
            </div>
            <div
              class="v-input__append-inner"
            >
              <div
                class="v-input__icon v-input__icon--append"
              >
                <i
                  aria-hidden="true"
                  class="v-icon notranslate v-icon--disabled material-icons theme--light"
                >
                  arrow_drop_down
                </i>
              </div>
            </div>
            <input
              name="custom_filter_infos_attribute_name.field"
              type="hidden"
              value="test"
            />
          </div>
          <div
            class="v-menu"
          >
            <transition-stub
              name="v-menu-transition"
            />
          </div>
        </div>
        <div
          class="v-text-field__details"
        >
          <div
            class="v-messages theme--light"
          >
            <transition-group-stub
              class="v-messages__wrapper"
              name="message-transition"
              tag="div"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`c-infos-attribute-field Renders \`c-pattern-infos-attribute-field\` with custom props 4`] = `
<div
  class="v-menu__content theme--light menuable__content__active v-autocomplete__content"
  style="max-height: 304px; min-width: 0px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 8;"
>
  <div
    class="v-list v-select-list v-sheet theme--light theme--light"
    role="listbox"
    tabindex="-1"
  >
    <div
      aria-selected="true"
      class="v-list-item primary--text v-list-item--active v-list-item--link theme--light v-list-item--highlighted"
      role="option"
      tabindex="0"
    >
      <div
        class="v-list-item__content"
      >
        <div
          class="v-list-item__title"
        >
          Test text
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`c-infos-attribute-field Renders \`c-pattern-infos-attribute-field\` with custom props 5`] = `
<div
  class="layout"
>
  <div
    class="flex"
  >
    <div
      class="v-input v-input--is-label-active v-input--is-dirty v-input--is-disabled v-input--is-focused theme--light v-text-field v-select v-select--is-menu-active v-autocomplete"
    >
      <div
        class="v-input__control"
      >
        <div
          aria-expanded="true"
          aria-haspopup="listbox"
          class="v-input__slot"
          role="combobox"
        >
          <div
            class="v-select__slot"
          >
            <label
              class="v-label v-label--active v-label--is-disabled theme--light primary--text"
              style="left: 0px; position: absolute;"
            >
              Custom label
            </label>
            <input
              aria-activedescendant="list-item-83-0"
              autocomplete="off"
              disabled="disabled"
              type="text"
            />
            <div
              class="v-input__append-inner"
            >
              <div
                class="v-input__icon v-input__icon--append"
              >
                <i
                  aria-hidden="true"
                  class="v-icon notranslate v-icon--disabled material-icons theme--light"
                >
                  arrow_drop_down
                </i>
              </div>
            </div>
            <input
              name="custom_filter_infos_attribute_name.dictionary"
              type="hidden"
              value="Test text"
            />
          </div>
          <div
            class="v-menu"
          />
        </div>
        <div
          class="v-text-field__details"
        >
          <div
            class="v-messages theme--light"
          >
            <transition-group-stub
              class="v-messages__wrapper"
              name="message-transition"
              tag="div"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="flex"
  >
    <div
      class="v-input v-input--is-disabled v-input--is-focused theme--light v-text-field v-select v-select--is-menu-active"
    >
      <div
        class="v-input__control"
      >
        <div
          aria-expanded="true"
          aria-haspopup="listbox"
          class="v-input__slot"
          role="button"
        >
          <div
            class="v-select__slot"
          >
            <label
              class="v-label v-label--active v-label--is-disabled theme--light primary--text"
              style="left: 0px; position: absolute;"
            >
              Custom label
            </label>
            <div
              class="v-select__selections"
            >
              <input
                aria-readonly="false"
                autocomplete="off"
                disabled="disabled"
                readonly="readonly"
                type="text"
              />
            </div>
            <div
              class="v-input__append-inner"
            >
              <div
                class="v-input__icon v-input__icon--append"
              >
                <i
                  aria-hidden="true"
                  class="v-icon notranslate v-icon--disabled material-icons theme--light"
                >
                  arrow_drop_down
                </i>
              </div>
            </div>
            <input
              name="custom_filter_infos_attribute_name.field"
              type="hidden"
              value="test"
            />
          </div>
          <div
            class="v-menu"
          >
            <transition-stub
              name="v-menu-transition"
            />
          </div>
        </div>
        <div
          class="v-text-field__details"
        >
          <div
            class="v-messages theme--light"
          >
            <transition-group-stub
              class="v-messages__wrapper"
              name="message-transition"
              tag="div"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`c-infos-attribute-field Renders \`c-pattern-infos-attribute-field\` with custom props 6`] = `
<div
  class="v-menu__content theme--light menuable__content__active v-autocomplete__content"
  style="max-height: 304px; min-width: 0px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 8;"
>
  <div
    class="v-list v-select-list v-sheet theme--light theme--light"
    role="listbox"
    tabindex="-1"
  >
    <div
      aria-selected="true"
      class="v-list-item primary--text v-list-item--active v-list-item--link theme--light v-list-item--highlighted"
      role="option"
      tabindex="0"
    >
      <div
        class="v-list-item__content"
      >
        <div
          class="v-list-item__title"
        >
          Test text
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`c-infos-attribute-field Renders \`c-pattern-infos-attribute-field\` with default props 1`] = `
<div
  class="layout"
>
  <div
    class="flex"
  >
    <div
      class="v-input theme--light v-text-field"
    >
      <div
        class="v-input__control"
      >
        <div
          class="v-input__slot"
        >
          <div
            class="v-text-field__slot"
          >
            <label
              class="v-label theme--light"
              style="left: 0px; position: absolute;"
            >
              Dictionary
            </label>
            <input
              name="infos.dictionary"
              type="text"
            />
          </div>
        </div>
        <div
          class="v-text-field__details"
        >
          <div
            class="v-messages theme--light"
          >
            <transition-group-stub
              class="v-messages__wrapper"
              name="message-transition"
              tag="div"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="flex"
  >
    <div
      class="v-input v-input--is-disabled v-input--is-focused theme--light v-text-field v-select v-select--is-menu-active"
    >
      <div
        class="v-input__control"
      >
        <div
          aria-expanded="true"
          aria-haspopup="listbox"
          class="v-input__slot"
          role="button"
        >
          <div
            class="v-select__slot"
          >
            <label
              class="v-label v-label--active v-label--is-disabled theme--light primary--text"
              style="left: 0px; position: absolute;"
            >
              Field
            </label>
            <div
              class="v-select__selections"
            >
              <input
                aria-readonly="false"
                autocomplete="off"
                disabled="disabled"
                readonly="readonly"
                type="text"
              />
            </div>
            <div
              class="v-input__append-inner"
            >
              <div
                class="v-input__icon v-input__icon--append"
              >
                <i
                  aria-hidden="true"
                  class="v-icon notranslate v-icon--disabled material-icons theme--light"
                >
                  arrow_drop_down
                </i>
              </div>
            </div>
            <input
              name="infos.field"
              type="hidden"
            />
          </div>
          <div
            class="v-menu"
          >
            <transition-stub
              name="v-menu-transition"
            />
          </div>
        </div>
        <div
          class="v-text-field__details"
        >
          <div
            class="v-messages theme--light"
          >
            <transition-group-stub
              class="v-messages__wrapper"
              name="message-transition"
              tag="div"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`c-infos-attribute-field Renders \`c-pattern-infos-attribute-field\` with default props 2`] = `
<div
  class="v-menu__content theme--light menuable__content__active "
  style="max-height: 304px; min-width: 0px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 8;"
>
  <div
    class="v-list v-select-list v-sheet theme--light theme--light"
    role="listbox"
    tabindex="-1"
  >
    <div
      aria-selected="false"
      class="v-list-item v-list-item--link theme--light"
      role="option"
      tabindex="0"
    >
      <div
        class="v-list-item__content"
      >
        <div
          class="v-list-item__title"
        >
          Name
        </div>
      </div>
    </div>
    <div
      aria-selected="false"
      class="v-list-item v-list-item--link theme--light"
      role="option"
      tabindex="0"
    >
      <div
        class="v-list-item__content"
      >
        <div
          class="v-list-item__title"
        >
          Value
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`c-infos-attribute-field Renders \`c-pattern-infos-attribute-field\` with default props and combobox 1`] = `
<div
  class="layout"
>
  <div
    class="flex"
  >
    <div
      class="v-input v-input--is-focused theme--light v-text-field v-select v-select--is-menu-active v-autocomplete primary--text"
    >
      <div
        class="v-input__control"
      >
        <div
          aria-expanded="true"
          aria-haspopup="listbox"
          class="v-input__slot"
          role="combobox"
        >
          <div
            class="v-select__slot"
          >
            <label
              class="v-label v-label--active theme--light primary--text"
              style="left: 0px; position: absolute;"
            >
              Dictionary
            </label>
            <input
              autocomplete="off"
              type="text"
            />
            <div
              class="v-input__append-inner"
            >
              <div
                class="v-input__icon v-input__icon--append"
              >
                <i
                  aria-hidden="true"
                  class="v-icon notranslate material-icons theme--light primary--text"
                >
                  arrow_drop_down
                </i>
              </div>
            </div>
            <input
              name="infos.dictionary"
              type="hidden"
            />
          </div>
          <div
            class="v-menu"
          />
        </div>
        <div
          class="v-text-field__details"
        >
          <div
            class="v-messages theme--light primary--text"
          >
            <transition-group-stub
              class="v-messages__wrapper"
              name="message-transition"
              tag="div"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="flex"
  >
    <div
      class="v-input v-input--is-disabled v-input--is-focused theme--light v-text-field v-select v-select--is-menu-active"
    >
      <div
        class="v-input__control"
      >
        <div
          aria-expanded="true"
          aria-haspopup="listbox"
          class="v-input__slot"
          role="button"
        >
          <div
            class="v-select__slot"
          >
            <label
              class="v-label v-label--active v-label--is-disabled theme--light primary--text"
              style="left: 0px; position: absolute;"
            >
              Field
            </label>
            <div
              class="v-select__selections"
            >
              <input
                aria-readonly="false"
                autocomplete="off"
                disabled="disabled"
                readonly="readonly"
                type="text"
              />
            </div>
            <div
              class="v-input__append-inner"
            >
              <div
                class="v-input__icon v-input__icon--append"
              >
                <i
                  aria-hidden="true"
                  class="v-icon notranslate v-icon--disabled material-icons theme--light"
                >
                  arrow_drop_down
                </i>
              </div>
            </div>
            <input
              name="infos.field"
              type="hidden"
            />
          </div>
          <div
            class="v-menu"
          >
            <transition-stub
              name="v-menu-transition"
            />
          </div>
        </div>
        <div
          class="v-text-field__details"
        >
          <div
            class="v-messages theme--light"
          >
            <transition-group-stub
              class="v-messages__wrapper"
              name="message-transition"
              tag="div"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`c-infos-attribute-field Renders \`c-pattern-infos-attribute-field\` with default props and combobox 2`] = `
<div
  class="v-menu__content theme--light menuable__content__active v-autocomplete__content"
  style="max-height: 304px; min-width: 0px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 8;"
>
  <div
    class="v-list v-select-list v-sheet theme--light theme--light"
    role="listbox"
    tabindex="-1"
  >
    <div
      class="v-list-item theme--light"
      tabindex="-1"
    >
      <div
        class="v-list-item__content"
      >
        <div
          class="v-list-item__title"
        >
          No data available
        </div>
      </div>
    </div>
  </div>
</div>
`;
